--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,40 @@
-# Created by https://www.gitignore.io
+#Autosave files
+*~
 
-### XamarinStudio ###
-bin/
-obj/
+#build
+[Oo]bj/
+[Bb]in/
+packages/
+TestResults/
+
+# globs
+Makefile.in
+*.DS_Store
+*.sln.cache
+*.suo
+*.cache
+*.pidb
 *.userprefs
-
-
-### OSX ###
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-
-### Windows ###
-# Windows image file caches
+*.usertasks
+config.log
+config.make
+config.status
+aclocal.m4
+install-sh
+autom4te.cache/
+*.user
+*.tar.gz
+tarballs/
+test-results/
 Thumbs.db
-ehthumbs.db
 
-# Folder config file
-Desktop.ini
+#Mac bundle stuff
+*.dmg
+*.app
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+#resharper
+*_Resharper.*
+*.Resharper
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
+#dotCover
+*.dotCover
